force-app/main/default/objects/Order_History__c/Order_History__c.object-meta.xml
<CustomObject>
    <label>Order History</label>
    <nameField>
        <displayFormat>HS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>