force-app/main/default/objects/Order_History__c/fields/Despatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Despatch_Date__c</fullName>
    <label>Despatch Date</label>
    <type>Date</type>
</CustomField>