force-app/main/default/objects/Order_History__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>OrderItem</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Histories</relationshipLabel>
    <relationshipName>Order_Histories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>